  geom_boxplot(). Changing the defaults for the outliers was previously not
  possible. (@ThierryO, #757)
* Added helper function `labeller` for formatting faceting values.
  (@stefanedwards, #910)

* Added `label_wrap_gen` based on 
  https://github.com/hadley/ggplot2/wiki/labeller#writing-new-labellers
  (@stefanedwards, #910)

ggplot2 0.9.3.1
----------------------------------------------------------------

BUG FIXES

* The theme element `legend.box.just` now can be set. It was not properly
  recognized before.

* `stat_density2d` previously resulted in errors when geom="polygon". This
  is fixed. (Fixes #741 and #749)

* `annotation_logticks` previously drew one set of logticks for each group,
  and inherited aesthetic mappings like colour. It no longer does this. (Fixes
  #767)

* Plots with geom_crossbar not display correct symbol in legend. (Fixes #768)

* Grouping is no longer set automatically by `stat_summary()`, allowing for
  summary paths. This reverts a change made for 0.9.3. (Fixes #732 and #739)

ggplot2 0.9.3
----------------------------------------------------------------

* The `plotmatrix` function has been deprecated and prints a warning
  message.

* `stat_bin` now produces warning messages when it is used with set or
  mapped y values. Previously, it was possible to use `stat_bin` and
  also set/map y values; if there was one y value per group, it would
  display the y values from the data, instead of the counts of cases for
  each group. This usage is deprecated and will be removed in a future
  version of ggplot2. (Winston Chang. Fixes #632)

* Several small changes were made so that ggplot2 is compatible with
  plyr <= 1.7.1 as well as plyr > 1.7.1.

* `geom_polygon` draws multiple polygons as a single grob instead of as
  separate grobs. This results in much better performance. For example,
  drawing a world map is about 12 times faster. (Winston Chang. Fixes #666)

MINOR FEATURES
