@@ -77,6 +77,8 @@ ggplot2 0.9.3.1.99
   https://github.com/hadley/ggplot2/wiki/labeller#writing-new-labellers
   (@stefanedwards, #910)
 
+* Fixed segment annotations not transforming with scales (@BrianDiggs, #859)
+
 ggplot2 0.9.3.1
 ----------------------------------------------------------------
 
